# roetig-bingo

./: Cargo.toml  README.md  bingo_elements.json
src/: bingo_element.rs  board_renderer.rs  main.rs
