[package]
name = "roetig-bingo"
version = "0.1.0"
edition = "2024"

[dependencies]

rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
image = { version = "0.25", default-features = false, features = ["png", "gif", "jpeg"] }
rusttype = "0.9"
dirs-next = "2.0"
walkdir = "2.5"
